day 3 session 2 - break 1 commit

--- a/practices/requirements.txt
+++ b/practices/requirements.txt
@@ -11,3 +11,15 @@ langchain-core
 langchain-openai
 langchain-experimental
 langchain-community
+
+langchain-pinecone
+pinecone-client
+wikipedia
+
+faiss-cpu
+arxiv
+
+rank_bm25
+
+chromadb
+langchain-chroma
